# mesos

./: Makefile.am  README.md  configure.ac
include/: Makefile.am
src/: Makefile.am
src/deploy/: mesos-daemon.sh.in  mesos-start-cluster.sh.in  mesos-start-masters.sh.in  mesos-start-slaves.sh.in  mesos-stop-masters.sh.in  mesos-stop-slaves.sh.in
src/examples/java/: test-framework.in
src/examples/python/: test-executor.in  test-framework.in
src/java/jni/: construct.cpp  convert.cpp  org_apache_mesos_Log.cpp  org_apache_mesos_state_AbstractState.cpp
src/linux/: cgroups.cpp  cgroups.hpp
src/python/: setup.py.in
src/slave/containerizer/isolators/cgroups/: cpushare.cpp  mem.cpp  mem.hpp
src/tests/: cgroups_tests.cpp
src/zookeeper/: authentication.hpp  zookeeper.hpp
