
nobase_include_HEADERS = mesos/mesos.proto \
mesos/resources.hpp \
mesos/scheduler.hpp \
mesos/mesos.hpp \
mesos/process/gc.hpp \
mesos/process/once.hpp \
mesos/process/protobuf.hpp \
mesos/process/gmock.hpp \
mesos/process/io.hpp \
mesos/process/clock.hpp \
mesos/process/statistics.hpp \
mesos/process/timeseries.hpp \
mesos/process/timeout.hpp \
mesos/process/id.hpp \
mesos/process/tuples/tuples.hpp \
mesos/process/tuples/details.hpp \
mesos/process/message.hpp \
mesos/process/delay.hpp \
mesos/process/collect.hpp \
mesos/process/event.hpp \
mesos/process/future.hpp \
mesos/process/help.hpp \
mesos/process/deferred.hpp \
mesos/process/async.hpp \
mesos/process/gtest.hpp \
mesos/process/run.hpp \
mesos/process/logging.hpp \
mesos/process/dispatch.hpp \
mesos/process/http.hpp \
mesos/process/limiter.hpp \
mesos/process/owned.hpp \
mesos/process/pid.hpp \
mesos/process/timer.hpp \
mesos/process/process.hpp \
mesos/process/socket.hpp \
mesos/process/latch.hpp \
mesos/process/shared.hpp \
mesos/process/defer.hpp \
mesos/process/executor.hpp \
mesos/process/filter.hpp \
mesos/process/profiler.hpp \
mesos/process/mime.hpp \
mesos/process/time.hpp \
mesos/stout/gzip.hpp \
mesos/stout/flags.hpp \
mesos/stout/cache.hpp \
mesos/stout/protobuf.hpp \
mesos/stout/fs.hpp \
mesos/stout/thread.hpp \
mesos/stout/flags/flags.hpp \
mesos/stout/flags/flag.hpp \
mesos/stout/flags/parse.hpp \
mesos/stout/flags/loader.hpp \
mesos/stout/stopwatch.hpp \
mesos/stout/error.hpp \
mesos/stout/fatal.hpp \
mesos/stout/exit.hpp \
mesos/stout/hashset.hpp \
mesos/stout/os.hpp \
mesos/stout/nothing.hpp \
mesos/stout/numify.hpp \
mesos/stout/json.hpp \
mesos/stout/linkedhashmap.hpp \
mesos/stout/preprocessor.hpp \
mesos/stout/try.hpp \
mesos/stout/lambda.hpp \
mesos/stout/utils.hpp \
mesos/stout/result.hpp \
mesos/stout/gtest.hpp \
mesos/stout/set.hpp \
mesos/stout/path.hpp \
mesos/stout/hashmap.hpp \
mesos/stout/foreach.hpp \
mesos/stout/strings.hpp \
mesos/stout/net.hpp \
mesos/stout/multihashmap.hpp \
mesos/stout/proc.hpp \
mesos/stout/bytes.hpp \
mesos/stout/os/signals.hpp \
mesos/stout/os/killtree.hpp \
mesos/stout/os/linux.hpp \
mesos/stout/os/osx.hpp \
mesos/stout/os/ls.hpp \
mesos/stout/os/sendfile.hpp \
mesos/stout/os/sysctl.hpp \
mesos/stout/os/process.hpp \
mesos/stout/os/pstree.hpp \
mesos/stout/os/read.hpp \
mesos/stout/os/exists.hpp \
mesos/stout/os/fork.hpp \
mesos/stout/option.hpp \
mesos/stout/stringify.hpp \
mesos/stout/none.hpp \
mesos/stout/uuid.hpp \
mesos/stout/some.hpp \
mesos/stout/format.hpp \
mesos/stout/multimap.hpp \
mesos/stout/duration.hpp \
mesos/stout/check.hpp \
mesos/executor.hpp \
mesos/values.hpp
